--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,9 @@
 
 .site-header{
   border-top:none;
+  background-image: url("../images/bg.png");
+  background-repeat: no-repeat;
+  background-size: 860px 56px;
 }
 
 .site-header .wrapper {
@@ -15,4 +18,16 @@
   height:40px;
   border-radius: 50%;
   float: left;
+}
+
+.site-footer{
+  background-image: url("../images/footer-bg.png");
+  background-repeat: no-repeat;
+  background-size: 1920px 116px;
+  -moz-transform: scaleX(-1);
+  -o-transform: scaleX(-1);
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+  filter: FlipH;
+  -ms-filter: "FlipH"; 
 }
