--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,10 @@
 <head>
   <title>{{ page.title }}</title>
   <!-- <link rel="stylesheet" href="/me/assets/css/syntax-highlight.css"> -->
-    <!-- <link rel="stylesheet" href="/me/assets/css/main.css"> -->
+  <!-- <link rel="stylesheet" href="/me/assets/css/main.css"> -->
+  {% raw %}{% if jekyll.environment == 'production' and site.google_analytics %}
+  {% include analytics.html %}
+  {% endif %}{% endraw %}
 </head>
 <body>
 	<header>
