--- a/_includes/not-google-analytics.html
+++ b/_includes/not-google-analytics.html
@@ -18,7 +18,7 @@
                 type,
                 location: window.location.href,
                 userAgent: navigator.userAgent,
-                referrrer: document.referrer,
+                referrer: document.referrer,
             });
         }
 
